# ChocAn

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  definitions.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.gitlab/issue_templates/: bug_template.md  feature_template.md
.gitlab/merge_request_templates/: pr_template.md
examples/: dataclasses_example.py  prompting.py
src/: .gitignore
src/choc_an_simulator/: __init__.py  database_management.py  example.py  login.py  main.py  manager.py  provider.py  report.py  schemas.py  user_io.py
src/choc_an_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/choc_an_simulator/database_management/: __init__.py  _parquet_utils.py  _write_records.py  edit_records.py  load_records.py  reports.py
src/choc_an_simulator/storage/: provider_directory.pkt  service_log.pkt
src/scripts/: csv_to_database_file.py  example_provider_directory.csv
tests/: conftest.py  test_database_management.py  test_example.py  test_login.py  test_manager.py  test_provider.py  test_report.py  test_schemas.py  test_user_io.py  testing_utils.py
tests/system/: __init__.py  test_manager_system.py  test_provider_system.py
tests/unit/: __init__.py  test_login.py  test_manager.py  test_provider.py  test_report.py
